# simple-file-storage

./: Cargo.toml  Dockerfile  build_n_push.sh  readme.md
k8s/: helm.md  pvc.yaml  readme.md  secret.yaml  simple-file-storage.yaml
src/: app.rs  config.rs  error.rs  main.rs  routes.rs  state.rs  utils.rs
src/auth/: jwt.rs  mod.rs
src/routes/: download.rs  health.rs  internal.rs  mod.rs  upload.rs
src/storage/: file_manager.rs  mod.rs
src/utils/: mod.rs  sanitize.rs  uri.rs
